<?xml version="1.0"?>
<package>
  <name>storm32_gimbal</name>
  <version>0.1.0</version>
  <description>
    Driver for STorM32 gimbal controller.
  </description>

  <license>GPLv2</license>

  <maintainer email="bei.liu@mail.mcgill.ca">Bei Chen Liu</maintainer>
  <author email="bei.liu@mail.mcgill.ca">Bei Chen Liu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python-serial</run_depend>
</package>
