<?xml version="1.0"?>
<package format="2">
  <name>storm32_gimbal</name>
  <version>0.1.0</version>
  <description>
    Driver for the STorM32 gimbal controller.
  </description>

  <license>GPLv2</license>

  <maintainer email="bei.liu@mail.mcgill.ca">Bei Chen Liu</maintainer>
  <author email="bei.liu@mail.mcgill.ca">Bei Chen Liu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-serial</exec_depend>
</package>
